infra-cluster/apps-ai/anything-llm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anything-llm
  namespace: ai
  labels:
    app: anything-llm
  annotations:
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: "anythingllm"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: "anythingllm.${AI_APPLIANCE_DOMAIN:=example.local}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anything-llm
                port:
                  number: 3001
